--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
+    "redux-persist-transform-expire": "^0.0.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
